// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing issue_comment_created event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a pr 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing issue_comment_created event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a push 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing issue_comment_created event... ...with function getChangedFiles... ...it throws an error with invalid owner for a pr 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_created event... ...with function getChangedFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_created event... ...with function getChangedFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base:abcd1234 head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_created event... ...with function getChangedFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:abcd1234\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_created event... ...with function getChangedFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_created event... ...with function getChangedPRFiles... ...it throws an error with invalid owner for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_created event... ...with function getChangedPRFiles... ...it throws an error with invalid repo for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_created event... ...with function getChangedPRFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom pr:NaN\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_created event... ...with function getChangedPushFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_created event... ...with function getChangedPushFiles... ...it throws an error with invalid repo for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_created event... ...with function getChangedPushFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base:1234abcd head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_created event... ...with function getChangedPushFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base: head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_edited event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a pr 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing issue_comment_edited event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a push 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing issue_comment_edited event... ...with function getChangedFiles... ...it throws an error with invalid owner for a pr 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_edited event... ...with function getChangedFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_edited event... ...with function getChangedFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base:abcd1234 head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_edited event... ...with function getChangedFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:abcd1234\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_edited event... ...with function getChangedFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_edited event... ...with function getChangedPRFiles... ...it throws an error with invalid owner for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_edited event... ...with function getChangedPRFiles... ...it throws an error with invalid repo for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_edited event... ...with function getChangedPRFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom pr:NaN\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_edited event... ...with function getChangedPushFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_edited event... ...with function getChangedPushFiles... ...it throws an error with invalid repo for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_edited event... ...with function getChangedPushFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base:1234abcd head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing issue_comment_edited event... ...with function getChangedPushFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base: head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_opened event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a pr 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing pull_request_opened event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a push 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing pull_request_opened event... ...with function getChangedFiles... ...it throws an error with invalid owner for a pr 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_opened event... ...with function getChangedFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_opened event... ...with function getChangedFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base:abcd1234 head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_opened event... ...with function getChangedFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:abcd1234\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_opened event... ...with function getChangedFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_opened event... ...with function getChangedPRFiles... ...it throws an error with invalid owner for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_opened event... ...with function getChangedPRFiles... ...it throws an error with invalid repo for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_opened event... ...with function getChangedPRFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom pr:NaN\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_opened event... ...with function getChangedPushFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_opened event... ...with function getChangedPushFiles... ...it throws an error with invalid repo for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_opened event... ...with function getChangedPushFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base:1234abcd head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_opened event... ...with function getChangedPushFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base: head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_reopened event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a pr 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing pull_request_reopened event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a push 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing pull_request_reopened event... ...with function getChangedFiles... ...it throws an error with invalid owner for a pr 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_reopened event... ...with function getChangedFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_reopened event... ...with function getChangedFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base:abcd1234 head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_reopened event... ...with function getChangedFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:abcd1234\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_reopened event... ...with function getChangedFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_reopened event... ...with function getChangedPRFiles... ...it throws an error with invalid owner for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_reopened event... ...with function getChangedPRFiles... ...it throws an error with invalid repo for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_reopened event... ...with function getChangedPRFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom pr:NaN\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_reopened event... ...with function getChangedPushFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_reopened event... ...with function getChangedPushFiles... ...it throws an error with invalid repo for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_reopened event... ...with function getChangedPushFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base:1234abcd head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_reopened event... ...with function getChangedPushFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base: head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_synchronize event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a pr 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing pull_request_synchronize event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a push 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing pull_request_synchronize event... ...with function getChangedFiles... ...it throws an error with invalid owner for a pr 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_synchronize event... ...with function getChangedFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_synchronize event... ...with function getChangedFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base:abcd1234 head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_synchronize event... ...with function getChangedFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:abcd1234\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_synchronize event... ...with function getChangedFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_synchronize event... ...with function getChangedPRFiles... ...it throws an error with invalid owner for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_synchronize event... ...with function getChangedPRFiles... ...it throws an error with invalid repo for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_synchronize event... ...with function getChangedPRFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom pr:NaN\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_synchronize event... ...with function getChangedPushFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_synchronize event... ...with function getChangedPushFiles... ...it throws an error with invalid repo for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_synchronize event... ...with function getChangedPushFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base:1234abcd head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing pull_request_synchronize event... ...with function getChangedPushFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base: head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a pr 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing push event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a push 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing push event... ...with function getChangedFiles... ...it throws an error with invalid owner for a pr 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push event... ...with function getChangedFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push event... ...with function getChangedFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base:abcd1234 head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push event... ...with function getChangedFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:abcd1234\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push event... ...with function getChangedFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push event... ...with function getChangedPRFiles... ...it throws an error with invalid owner for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push event... ...with function getChangedPRFiles... ...it throws an error with invalid repo for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push event... ...with function getChangedPRFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom pr:NaN\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push event... ...with function getChangedPushFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push event... ...with function getChangedPushFiles... ...it throws an error with invalid repo for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push event... ...with function getChangedPushFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base:1234abcd head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push event... ...with function getChangedPushFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base: head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push_merge event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a pr 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing push_merge event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a push 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing push_merge event... ...with function getChangedFiles... ...it throws an error with invalid owner for a pr 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push_merge event... ...with function getChangedFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push_merge event... ...with function getChangedFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base:abcd1234 head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push_merge event... ...with function getChangedFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:abcd1234\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push_merge event... ...with function getChangedFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push_merge event... ...with function getChangedPRFiles... ...it throws an error with invalid owner for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push_merge event... ...with function getChangedPRFiles... ...it throws an error with invalid repo for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push_merge event... ...with function getChangedPRFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom pr:NaN\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push_merge event... ...with function getChangedPushFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push_merge event... ...with function getChangedPushFiles... ...it throws an error with invalid repo for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push_merge event... ...with function getChangedPushFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base:1234abcd head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing push_merge event... ...with function getChangedPushFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base: head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing schedule event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a pr 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing schedule event... ...with function getChangedFiles... ...it throws an error with a malformed owner/repo for a push 1`] = `
"{
  \\"error\\": \\"500/Bad-Repo\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"Repo input of trilom/testing/afew/backslash has more than 2 length after splitting.\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing schedule event... ...with function getChangedFiles... ...it throws an error with invalid owner for a pr 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing schedule event... ...with function getChangedFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:backslash owner:trilom-NOTREAL base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing schedule event... ...with function getChangedFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base:abcd1234 head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing schedule event... ...with function getChangedFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:abcd1234\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing schedule event... ...with function getChangedFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"undefined/Error\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:cloudformation owner:trilom base: head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing schedule event... ...with function getChangedPRFiles... ...it throws an error with invalid owner for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing schedule event... ...with function getChangedPRFiles... ...it throws an error with invalid repo for pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom pr:80\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing schedule event... ...with function getChangedPRFiles... ...it throws an error with no pull request 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPRFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom pr:NaN\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing schedule event... ...with function getChangedPushFiles... ...it throws an error with invalid owner for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:this-isntareal-githubowner base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing schedule event... ...with function getChangedPushFiles... ...it throws an error with invalid repo for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-chandkdk-action-thatdoesntreallyexist owner:trilom base:abcd1234 head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing schedule event... ...with function getChangedPushFiles... ...it throws an error with no after for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base:1234abcd head:\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;

exports[`Testing schedule event... ...with function getChangedPushFiles... ...it throws an error with no before for a push 1`] = `
"{
  \\"error\\": \\"404/HttpError\\",
  \\"from\\": \\"getChangedPushFiles\\",
  \\"message\\": \\"There was an error getting change files for \\\\nrepo:file-changes-action owner:trilom base: head:1234abcd\\",
  \\"payload\\": {
    \\"name\\": \\"HttpError\\",
    \\"status\\": \\"404\\"
  }
}"
`;
